[bdist_wheel]
universal = 1

[metadata]
license-file = LICENSE

[tool:pytest]
markers = 
    acessa_sat
    invoca_ativarsat
    invoca_comunicarcertificadoicpbrasil
    invoca_enviardadosvenda
    invoca_cancelarultimavenda
    invoca_consultarsat
    invoca_testefimafim
    invoca_consultarstatusoperacional
    invoca_consultarnumerosessao
    invoca_configurarinterfacederede
    invoca_associarassinatura
    invoca_atualizarsoftwaresat
    invoca_extrairlogs
    invoca_bloquearsat
    invoca_desbloquearsat
    invoca_trocarcodigodeativacao
    invoca_consultarultimasessaofiscal

[coverage:report]
omit = 
    tests/*
    .eggs/*

